# vwh

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/: dependabot.yml
.github/workflows/: release.yml
crates/vwh/: Cargo.toml  README.md
crates/vwh-core/: Cargo.toml  README.md
crates/vwh-core/src/: crypto.rs  error.rs  format.rs  lib.rs  verify.rs
crates/vwh/src/: commands.rs  inspect.rs  key.rs  main.rs  migrate.rs  note_meta.rs  prompts.rs  registry.rs  state.rs
docs/man/: vwh.1
examples/: artifact.vwh  challenge.vwh  challenge.vwh.note
examples/demo-key/: PASSPHRASE.txt  identity.key.enc  identity.pub  sealing.key.enc  sealing.pub  signing.key.enc  signing.pub
