[workspace]
resolver = "2"
members = [
    "crates/vwh-core",
    "crates/vwh",
]

[workspace.package]
version = "4.0.1"
edition = "2021"
authors = ["Victor"]
license = "MIT"

[workspace.dependencies]
# Crypto
ed25519-dalek = "2.1"
blake3 = "1.5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
getrandom = "0.4"
zeroize = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
directories = "6.0"
fd-lock = "4.0"

# HTTP (inspector)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Interactive UX (authoring)
dialoguer = "0.12"
console = "0.16"
indicatif = "0.17"
