[package]
name = "vwh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
