[package]
name = "vwh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vwh"
path = "src/main.rs"

[dependencies]
vwh-core = { path = "../vwh-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# CLI
clap.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP
reqwest.workspace = true

# Utilities
hex.workspace = true
