[package]
name = "vwh"
version = "1.0.1"
authors = ["Victor Enrique Soto <contact@notvc.to>"]
edition = "2021"
description = "Cryptographic accountability tool for verifying digital presence."
license = "MIT"
repository = "https://github.com/notvcto/vwh"
homepage = "https://notvc.to"
keywords = ["security", "verification", "cryptography", "cli", "provenance"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[[bin]]
name = "vwh"
path = "src/main.rs"

[dependencies]
vwh-core = { version = "1.0.0", path = "../vwh-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# CLI
clap.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP
reqwest.workspace = true

# Utilities
hex.workspace = true
