[package]
name = "vwh"
version = "4.0.0"
authors = ["Victor Enrique Soto <contact@notvc.to>"]
edition = "2021"
description = "Cryptographic accountability tool for creating, signing, sealing, and verifying digital presence."
license = "MIT"
repository = "https://github.com/notvcto/vwh"
homepage = "https://notvc.to"
keywords = ["security", "verification", "cryptography", "cli", "provenance"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[[bin]]
name = "vwh"
path = "src/main.rs"

[dependencies]
vwh-core = { version = "4.0.0", path = "../vwh-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# CLI
clap.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP (inspector)
reqwest.workspace = true

# Crypto (authoring)
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true

# Utilities
hex.workspace = true
blake3.workspace = true
directories.workspace = true
fd-lock.workspace = true
rpassword = "7.3"

# Interactive UX (authoring)
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
